WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157518
Fix the !ENABLE(VIDEO) build
https://bugs.webkit.org/show_bug.cgi?id=157518
Summary
Fix the !ENABLE(VIDEO) build
Csaba Osztrogonác
Reported
2016-05-10 07:59:49 PDT
There is no WebCore::HTMLMediaElement if ENABLE(VIDEO) is false, we should guard all of its use.
Attachments
Patch
(4.16 KB, patch)
2016-05-10 08:01 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews125 for ios-simulator-wk2
(654.90 KB, application/zip)
2016-05-10 08:55 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-05-10 08:01:17 PDT
Created
attachment 278493
[details]
Patch
Build Bot
Comment 2
2016-05-10 08:55:28 PDT
Comment on
attachment 278493
[details]
Patch
Attachment 278493
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1299010
New failing tests: fast/scrolling/ios/scroll-events-back-forward-after-pageshow.html
Build Bot
Comment 3
2016-05-10 08:55:30 PDT
Created
attachment 278496
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
WebKit Commit Bot
Comment 4
2016-05-10 13:43:55 PDT
Comment on
attachment 278493
[details]
Patch Clearing flags on attachment: 278493 Committed
r200641
: <
http://trac.webkit.org/changeset/200641
>
WebKit Commit Bot
Comment 5
2016-05-10 13:43:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug