Fix the !ENABLE(VIDEO) build https://bugs.webkit.org/show_bug.cgi?id=157518

Reviewed by Alex Christensen.

* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::fetchData):
(WebKit::WebsiteDataStore::removeData):
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeWebProcess):


Canonical link: https://commits.webkit.org/175670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200641 268f45cc-cd09-0410-ab3c-d52691b4dbfc